--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,6 @@
   "deno.unstable": true,
   "deno.lint": true,
   "[typescript]": {
-    "editor.defaultFormatter": "denoland.vscode-deno",
-  },
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  }
 }
